# mapping-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  crates_tree  deny.toml  release-plz.toml
.github/: dependabot.yml
.github/workflows/: build-linux.yml  build-macos.yml  build-no_std.yml  build-win.yml  build.yml  checks.yml  code-coverage.yml  coverage.yml  deny.yml  doc.yml  main.yml  pr-checks.yml  pr-labels.yml  pr.yml  release.yml  tags.yml
crates/algorithms/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/algorithms/examples/: visualized_icp_2d.rs
crates/algorithms/src/: lib.rs
crates/algorithms/src/ackerman/: mod.rs
crates/algorithms/src/astar/: mod.rs
crates/algorithms/src/bresenham/: mod.rs
crates/algorithms/src/cms_2d/: mod.rs
crates/algorithms/src/convex_hulls/: chans.rs  graham_scan.rs  mod.rs
crates/algorithms/src/geo/: haversine.rs  mod.rs
crates/algorithms/src/haversine/: mod.rs
crates/algorithms/src/haversine_formula/: mod.rs
crates/algorithms/src/icp/: helpers.rs  mod.rs  types.rs
crates/algorithms/src/kd_tree/: mod.rs
crates/algorithms/src/lines/: bresenham.rs  mod.rs
crates/algorithms/src/point_clouds/: downsample.rs  lex_sort.rs  mod.rs  nearest_neighbour.rs
crates/algorithms/src/point_clouds/icp/: helpers.rs  mod.rs  types.rs
crates/algorithms/src/point_in_polygon/: mod.rs
crates/algorithms/src/polygons/: graham_scan.rs  jarvis_march.rs  mod.rs  point_in_polygon.rs
crates/algorithms/src/scan_matching/: helpers.rs  mod.rs
crates/algorithms/src/types/: is_nan.rs  isometry.rs  mod.rs
crates/algorithms/src/utils/: mod.rs  point_cloud.rs
crates/mapping-algorithms/: CHANGELOG.md  Cargo.toml
crates/mapping-algorithms/src/: lib.rs
crates/mapping-algorithms/src/geo/: haversine.rs  mod.rs
crates/mapping-algorithms/src/kd_tree/: mod.rs
crates/mapping-algorithms/src/lines/: mod.rs
crates/mapping-algorithms/src/point_clouds/: mod.rs
crates/mapping-algorithms/src/point_clouds/icp/: types.rs
crates/mapping-algorithms/src/polygons/: graham_scan.rs  mod.rs
crates/mapping-algorithms/src/types/: is_nan.rs
crates/mapping-suites/: CHANGELOG.md  Cargo.toml  README.md
crates/mapping-suites/src/: lib.rs
crates/suites/: CHANGELOG.md  Cargo.toml
crates/suites/src/: lib.rs
crates/suites/src/hector_mapper/: builder.rs  grid_map.rs  mod.rs
