[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
authors = ["Emily Matheys <emilymatt96@gmail.com>"]
description = "A collection of algorithms and suites for SLAM purposes"
edition = "2021"
license = "MIT"
categories = ["algorithms", "science", "science::robotics"]
keywords = ["algorithms", "mathematics", "science"]
repository = "https://github.com/EmilyMatt/mapping-rs"

[workspace.dependencies]
bindgen = { version = "0.71.1", default-features = false }
cc = { version = "1.2.10", default-features = false }
log = { version = "0.4.25", default-features = false }
nalgebra = { version = "0.33.2", default-features = false, features = ["libm"] }
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
paste = { version = "1.0.15", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
thiserror = { version = "2.0.11", default-features = false }
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }

mapping-algorithms = { version = "0.1.0", path = "crates/mapping-algorithms" }
mapping-suites = { version = "0.1.0", path = "crates/mapping-suites" }

[profile.mindebug-dev]
inherits = "dev"
debug = "line-tables-only"

[profile.release]
lto = "thin"
debug = "line-tables-only"

[profile.nodebug-release]
inherits = "release"
debug = false

[profile.debug-release]
inherits = "release"
debug = true

[profile.dist-release]
inherits = "release"
codegen-units = 1
debug = false
lto = "fat"