[package]
name = "mapping-algorithms-rs"
version = "0.0.1"
authors = ["Emily Matheys <emilymatt96@gmail.com>"]
description = "A collection of pure-rust algorithms in popular use for SLAM purposes"
edition = "2021"
rust-version = "1.67"
license = "MIT"
readme = "../../README.md"
categories = ["algorithms", "science", "science::robotics"]
keywords = ["algorithms", "mathematics", "science"]
include = ["../LICENSE", "**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true

[lib]

[features]
default = []
std = ["nalgebra/std", "tracing?/std", "num-traits/std", "rand?/std", "rand?/std_rng"]
tracing = ["dep:tracing"]
cuda = ["nalgebra/cuda", "bindgen", "cc"]
libm = ["nalgebra/libm-force"]
rand = ["dep:rand"]

[dependencies]
log = { version = "0.4.19", default-features = false }
nalgebra = { version = "0.32.3", default-features = false }
num-traits = { version = "0.2.17", default-features = false }
paste = { version = "1.0.14", default-features = false }
rand = { version = "0.8", default-features = false, optional = true }
tracing = { version = "0.1.40", default-features = false, features = ["attributes"], optional = true }

[dev-dependencies]
eframe = { version = "0.24.1", default-features = false, features = ["glow"] }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
simple_logger = { version = "4.3.3", default-features = false, features = ["timestamps", "threads"]}

[build-dependencies]
bindgen = { version = "0.69.1", default-features = false, optional = true }
cc = { version = "1.0.83", default-features = false, optional = true }

[[example]]
name = "visualized_icp_2d"
required-features = ["std", "rand"]
