[package]
name = "mapping-algorithms"
version = "0.0.1"
authors = ["Emily Matheys <emilymatt96@gmail.com>"]
description = "A collection of pure-rust algorithms in popular use for SLAM purposes"
edition = "2021"
license = "MIT"
categories = ["algorithms", "science", "science::robotics"]
keywords = ["algorithms", "mathematics", "science"]
repository = "https://github.com/EmilyMatt/mapping-rs"

[package.metadata.docs.rs]
all-features = true

[lib]

[features]
default = ["std", "pregenerated"]
std = ["nalgebra/std", "tracing?/std", "num-traits/std", "rand/std", "rand/std_rng"]

pregenerated = ["dep:paste"]
tracing = ["dep:tracing"]
cuda = ["bindgen", "cc"]

[dependencies]
log = { version = "0.4.22", default-features = false }
nalgebra = { version = "0.33.0", default-features = false, features = ["libm"] }
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
paste = { version = "1.0.15", default-features = false, optional = true }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
tracing = { version = "0.1.40", default-features = false, features = ["attributes"], optional = true }

[dev-dependencies]
eframe = { version = "0.28.1", default-features = false, features = ["glow"] }
simple_logger = { version = "5.0.0", default-features = false, features = ["timestamps", "threads"]}

[build-dependencies]
bindgen = { version = "0.69.4", default-features = false, optional = true }
cc = { version = "1.0.106", default-features = false, optional = true }

[[example]]
name = "visualized_icp_2d"
required-features = ["std", "pregenerated"]
