[package]
name = "mapping-suites"
version = "0.1.0"
authors = ["Emily Matheys <emilymatt96@gmail.com>"]
description = "A collection of SLAM suites, based on mapping-algorithms"
edition = "2021"
license = "MIT"
categories = ["algorithms", "science", "science::robotics"]
keywords = ["algorithms", "mathematics", "science"]
repository = "https://github.com/EmilyMatt/mapping-rs"

[package.metadata.docs.rs]
all-features = true

[lib]

[features]
default = ["std"]
std = ["mapping-algorithms/std", "nalgebra/std", "thiserror", "tracing?/std"]

cuda = ["mapping-algorithms/cuda", "bindgen", "cc"]
tracing = ["dep:tracing"]

[dependencies]
log = { workspace = true }
nalgebra = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

mapping-algorithms = { workspace = true }

[build-dependencies]
bindgen = { workspace = true, optional = true }
cc = { workspace = true, optional = true }
