[package]
name = "mapping-suites-rs"
version = "0.0.1"
authors = ["Emily Matheys <emilymatt96@gmail.com>"]
description = "A collection of SLAM suites, for use with mapping-algorithms-rs"
edition = "2021"
rust-version = "1.67"
license = "MIT"
readme = "../../README.md"
categories = ["slam", "robotics", "algorithms"]
keywords = ["algorithms", "mathematics", "science"]
include = ["../LICENSE", "**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true

[lib]

[features]
default = ["std"]
std = ["nalgebra/std", "tracing?/std", "mapping-algorithms-rs/std"]
tracing = ["dep:tracing"]
cuda = ["mapping-algorithms-rs/cuda", "nalgebra/cuda", "bindgen", "cc"]

[dependencies]
mapping-algorithms-rs = { default-features = false, path = "../algorithms" }
log = { version = "0.4.19", default-features = false }
nalgebra = { version = "0.32.3", default-features = false }
tracing = { version = "0.1.39", default-features = false, optional = true }

[build-dependencies]
bindgen = { version = "0.68.1", default-features = false, optional = true }
cc = { version = "1.0.83", default-features = false, optional = true }
