[package]
name = "mapping-suites-rs"
version = "0.0.1"
authors = ["Emily Matheys <emilymatt96@gmail.com>"]
description = "A collection of SLAM suites, for use with mapping-algorithms-rs"
edition = "2021"
rust-version = "1.72"
license = "MIT"
readme = "../../README.md"
categories = ["algorithms", "science", "science::robotics"]
keywords = ["algorithms", "mathematics", "science"]
include = ["../LICENSE", "**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true

[lib]

[features]
default = ["std"]
std = ["mapping-algorithms-rs/std", "nalgebra/std", "tracing?/std"]
tracing = ["dep:tracing"]
cuda = ["mapping-algorithms-rs/cuda", "nalgebra/cuda", "bindgen", "cc"]

[dependencies]
mapping-algorithms-rs = { path = "../algorithms", default-features = false, features = ["pregenerated"] }
log = { version = "0.4.19", default-features = false }
nalgebra = { version = "0.32.4", default-features = false, features = ["libm", "libm-force"] }
num-traits = { version = "0.2.18", default-features = false, features = ["libm"] }
rand = { version = "0.8", default-features = false, optional = true }
tracing = { version = "0.1.40", default-features = false, features = ["attributes"], optional = true }

[build-dependencies]
bindgen = { version = "0.69.4", default-features = false, optional = true }
cc = { version = "1.0.83", default-features = false, optional = true }

# Compilation Profiles
[profile.dev]
opt-level = 1

# Compile external dependencies with higher opt level
[profile.dev.package."*"]
opt-level = 3

[profile.test]
opt-level = 3

[profile.release]
opt-level = 3