[package]
name = "mapping-suites"
version = "0.0.1"
authors = ["Emily Matheys <emilymatt96@gmail.com>"]
description = "A collection of SLAM suites, based on mapping-algorithms"
edition = "2021"
license = "MIT"
categories = ["algorithms", "science", "science::robotics"]
keywords = ["algorithms", "mathematics", "science"]
repository = "https://github.com/EmilyMatt/mapping-rs"

[package.metadata.docs.rs]
all-features = true

[lib]

[features]
default = ["std"]
std = ["mapping-algorithms/std", "nalgebra/std", "thiserror", "tracing?/std"]

tracing = ["dep:tracing"]
cuda = ["mapping-algorithms/cuda", "bindgen", "cc"]

[dependencies]
mapping-algorithms = { path = "../algorithms", version = "0.0.1", default-features = false, features = ["pregenerated"] }

log = { version = "0.4.22", default-features = false }
nalgebra = { version = "0.33.0", default-features = false, features = ["libm"] }
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
thiserror = { version = "1.0.63", default-features = false, optional = true }
tracing = { version = "0.1.40", default-features = false, features = ["attributes"], optional = true }

[build-dependencies]
bindgen = { version = "0.69.4", default-features = false, optional = true }
cc = { version = "1.1.6", default-features = false, optional = true }
